<resources>
    <string name="app_name">Food Planner</string>

    <!-- Screens Titles -->
    <string name="auth_screen_title">Food Planner</string>
    <string name="home_screen_title">Food Planner</string>
    <string name="log_in_screen_title">Food Planner</string>
    <string name="sign_up_screen_title">Food Planner</string>
    <string name="welcome_screen_title">Food Planner</string>
    <string name="search_screen_title">Search</string>
    <string name="plan_screen_title">My Plans</string>
    <string name="meal_screen_title">Meal</string>
    <string name="meals_screen_title">Meals</string>
    <string name="names_screen_title">Search by Name</string>
    <string name="categories_screen_title">Search by Category</string>
    <string name="areas_screen_title">Search by Country</string>
    <string name="ingredients_screen_title">Search by Ingredient</string>
    <string name="fav_screen_title">Favourite Meals</string>

    <!-- Welcome Screen -->
    <string name="welcome_next_button">Next</string>
    <string name="welcome_get_started_button">Get Started</string>
    <string name="welcome_skip_button">Skip</string>
    <string name="on_boarding_title_1">Learn How To Make The Recipe</string>
    <string name="on_boarding_title_2">Search For Any Recipe</string>
    <string name="on_boarding_title_3">All Your Favourite Recipes In One Place</string>
    <string name="on_boarding_text_1">Get instructions on how to make the recipe.</string>
    <string name="on_boarding_text_2">Search for recipes based on countries, ingredients or categories.</string>
    <string name="on_boarding_text_3">Save time on planning by having your favourite recipes within reach.</string>

    <!-- Auth -->
    <string name="auth_sign_up_button">Sign up with Email</string>
    <string name="auth_log_in_button">Log in with Email</string>
    <string name="skip">Skip</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_error">Please insert a valid email.</string>
    <string name="empty_password_error">Password cannot be empty.</string>
    <string name="password_length_error">Your password should have at least six digits.</string>
    <string name="password_error">Your password should include one digit, one lower case letter and one upper case letter.</string>
    <!-- Log In -->
    <string name="log_in_button">Sign in</string>
    <string name="log_in_with_google_button">Sign in with Google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recovery_email_sent">Check your inbox for the recovery email.</string>
    <string name="new_in_app">New in Food Planner? </string>
    <string name="sign_up_for_free">Sign up for free</string>
    <!-- Sign Up -->
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up_button">Create an Account</string>
    <string name="user_name_error">Please insert a valid name.</string>
    <string name="password_match_error">Passwords do not match.</string>
    <string name="sign_up_with_google_button">Sign in with Google</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_in">Sign in</string>

    <!-- Home Fragment -->
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="categories_label">Categories</string>

    <!-- Meal Fragment -->
    <string name="from">From: %1$s</string>
    <string name="add_to_cart">Add to\nFavourites</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="add_to_plan">Add to\nPlan</string>
    <string name="remove_from_cart">Remove from\nFavourites</string>
    <string name="added_toast">%1$s added to Favourites</string>
    <string name="removed_toast">%1$s removed from Favourites</string>
    <string name="ingredients">Ingredients</string>
    <string name="inst">How to make</string>
    <string name="add_to_plan_dialog_title">Add to Plan</string>

    <!-- Plan Fragment -->
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <!-- Search Fragment -->
    <string name="search_by">Search By</string>
    <string name="search_by_name_button">Name</string>
    <string name="search_by_category_button">Category</string>
    <string name="search_by_area_button">Country</string>
    <string name="search_by_ingredient_button">Ingredient</string>

    <!-- Content Descriptions -->
    <string name="email_content_description">Email</string>
    <string name="password_content_description">Password</string>
    <string name="fab_add_content_description">Add</string>
    <string name="image">Image</string>

    <!-- NavBar -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="fav">Favourites</string>
    <string name="my_plan">My Plan</string>

    <!-- Menus -->
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_sign_in">Sign in</string>

    <!-- Dialogs -->
    <!-- Sign Out Dialog -->
    <string name="dialog_sign_out_msg">Are you sure you want to sign out ?</string>
    <string name="dialog_sign_out">Sign out</string>
    <string name="dialog_cancel">Cancel</string>
    <!-- Skip Dialog -->
    <string name="dialog_skip_title">Wait! Are you sure?</string>
    <string name="dialog_skip_msg">You\'ll miss out on personalized content and saving our delicious recipes.</string>
    <string name="dialog_skip_yes">Yes, I\'m sure</string>
    <string name="dialog_skip_cancel">No, go back</string>
    <!-- Log In Dialog -->
    <string name="dialog_log_in_title">Sign Up for More Features</string>
    <string name="dialog_log_in_msg">Add your food preferences, shop your recipes, plan your meals and more!</string>
    <string name="dialog_log_in_yes">Sign Up</string>
    <string name="dialog_log_in_cancel">Cancel</string>
    <!-- Remove Meal from Plan-->
    <string name="dialog_remove_from_plan_title">Remove Meal</string>
    <string name="dialog_remove_from_plan_msg">Are you sure you want to remove %1$s from the plan?</string>
    <string name="dialog_remove_from_plan_yes">Remove</string>
    <string name="dialog_remove_from_plan_cancel">Cancel</string>
    <!-- Loading Dialog -->
    <string name="please_wait">Please Wait…</string>
</resources>