<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".view.search.search.SearchFragment">

    <Button
        android:id="@+id/search_by_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_background"
        android:layout_marginVertical="24dp"
        android:text="@string/search_by_name_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/search_by_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_background"
        android:text="@string/search_by_category_button"
        android:textSize="16sp"
        android:layout_marginVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_name"/>

    <Button
        android:id="@+id/search_by_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_background"
        android:text="@string/search_by_area_button"
        android:textSize="16sp"
        android:layout_marginVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_category"/>

    <Button
        android:id="@+id/search_by_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_background"
        android:text="@string/search_by_ingredient_button"
        android:textSize="16sp"
        android:layout_marginVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_area"/>

</androidx.constraintlayout.widget.ConstraintLayout>