<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.view.AuthFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".4"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        app:layout_constraintTop_toBottomOf="@id/skip_button"
        app:lottie_autoPlay="true"
        app:lottie_fileName="auth_anim.json"
        app:lottie_loop="true" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:text="@string/auth_sign_up_button"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:text="@string/auth_log_in_button"
        app:layout_constraintBottom_toTopOf="@id/google_sign_in_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>